--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
 
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
